--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
 	width: 100%;
 	height: 100%;
 	display: flex;
+	box-sizing: border-box;
+	padding: 2rem;
 	overflow: hidden;
 	align-items: center;
 	justify-content: center;
@@ -23,12 +25,14 @@ body {
 }
 
 .logo {
-	/* 	max-width: 50vw; */
-	height: 25vw;
+	height: 10vh;
+	max-width: 550px;
+	min-width: 150px;
 	width: 100%;
 	background-size: contain;
-	background-position: center;
 	background-repeat: no-repeat;
+	background-position: center;
+	padding: 80px 80px;
 }
 
 /* base64 image */
