--- a/style.css
+++ b/style.css
@@ -170,34 +170,32 @@ These styles are required to make icons render reliably */
 	max-height: 450px;
 }
 .parallax > use {
-	animation: slide-in-blurred-bottom 0.6s cubic-bezier(0.23, 1, 0.32, 1) 0.1s
-			both,
-		move-forever 55s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
+	animation: move-forever 55s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
 }
 .parallax > use:nth-child(1) {
 	fill: rgba(96, 50, 166, 0.3);
-	animation-duration: 0.6s, 10s;
-	animation-delay: 0.1s, -2s;
+	animation-duration:10s;
+	animation-delay: -2s;
 }
 .parallax > use:nth-child(2) {
 	fill: rgba(179, 43, 169, 0.5);
-	animation-duration: 0.6s, 17s;
-	animation-delay: 0.2s, -3s;
+	animation-duration: 17s;
+	animation-delay: -3s;
 }
 .parallax > use:nth-child(3) {
 	fill: rgba(140, 47, 169, 0.7);
-	animation-duration: 0.6s, 13s;
-	animation-delay: 0.3s, -4s;
+	animation-duration: 13s;
+	animation-delay: -4s;
 }
 .parallax > use:nth-child(4) {
 	fill: rgba(215, 40, 165, 0.7);
-	animation-duration: 0.6s, 23s;
-	animation-delay: 0.4s, -5s;
+	animation-duration: 23s;
+	animation-delay: -5s;
 }
 .parallax > use:nth-child(5) {
 	fill: rgba(247, 42, 158, 0.9);
-	animation-duration: 0.6s, 25s;
-	animation-delay: 0.5s, -6s;
+	animation-duration: 25s;
+	animation-delay: -6s;
 }
 
 @keyframes move-forever {
