--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ body {
 	border-radius: 10px;
 	border: 1px solid rgba(255, 255, 255, 0.18);
 
-	animation: slide-in-blurred-bottom 0.6s cubic-bezier(0.23, 1, 0.32, 1) 0.1s
-		both;
+	animation: slide-in-blurred-bottom 0.6s cubic-bezier(0.23, 1, 0.32, 1) 0.1s both;
+	will-change: transform;
 }
 
 /* Step 1: Common Properties
